fix OZON disappearing on mobile screens

--- a/src/styles/sass/base/_typography.scss
+++ b/src/styles/sass/base/_typography.scss
@@ -184,6 +184,9 @@ html {
         @media (max-width: var.$tablet) {
             font-size: 0.8rem;
         }
+        @media (max-width: 428px) {
+            font-size: 16px;
+        }
     }
 }
 
