--- a/src/styles/sass/layout/main/_start-screen.scss
+++ b/src/styles/sass/layout/main/_start-screen.scss
@@ -58,13 +58,23 @@
         justify-content: center;
         width: min-content;
         @media (max-width: var.$mobile-m) {
-            gap: 10px;
+            gap: 5px;
+        }
+        @media (max-width: 428px) {
+            justify-content: flex-end;
+            padding-bottom: 40px;
+        }
+        @media (max-width: 360px) {
+            padding-bottom: 20px;
         }
     }
 
     &__column-item {
         &:nth-child(3) {
             margin-bottom: 20px;
+            @media (max-width: var.$mobile-m) {
+                margin-bottom: 10px;
+            }
         }
     }
 }
